feature(gen): generated post design
