# gen/http/openapi.yaml
@@ -88,25 +88,30 @@ paths:
             format: int64
       schemes:
       - http
-  /notes/{userID}:
+  /note/{uuid}:
     get:
       tags:
       - calc
-      summary: getNotes calc
-      operationId: calc#getNotes
+      summary: getNote calc
+      operationId: calc#getNote
       parameters:
-      - name: userID
+      - name: uuid
         in: path
-        description: The email of the user
+        description: The note's UUID
         required: true
         type: string
       responses:
         "200":
           description: OK response.
           schema:
-            $ref: '#/definitions/CalcGetNotesResponseBody'
+            $ref: '#/definitions/CalcGetNoteResponseBody'
+        "404":
+          description: Not Found response.
+          schema:
+            $ref: '#/definitions/CalcGetNoteNoteMissingResponseBody'
       schemes:
       - http
+  /note/create/{userID}:
     post:
       tags:
       - calc
@@ -127,10 +132,37 @@ paths:
       responses:
         "201":
           description: Created response.
+          schema:
+            $ref: '#/definitions/CalcCreateNoteResponseBody'
+            required:
+            - NoteResponse
         "400":
           description: Bad Request response.
           schema:
             $ref: '#/definitions/CalcCreateNoteBadRequestResponseBody'
+      schemes:
+      - http
+  /notes/{userID}:
+    get:
+      tags:
+      - calc
+      summary: getNotes calc
+      operationId: calc#getNotes
+      parameters:
+      - name: userID
+        in: path
+        description: The email of the user
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK response.
+          schema:
+            $ref: '#/definitions/CalcGetNotesResponseBody'
+        "404":
+          description: Not Found response.
+          schema:
+            $ref: '#/definitions/CalcGetNotesNoteMissingResponseBody'
       schemes:
       - http
   /openapi.json:
@@ -179,6 +211,77 @@ definitions:
       fault:
         type: boolean
         description: Is the error a server-side fault?
+        example: true
+      id:
+        type: string
+        description: ID is a unique identifier for this particular occurrence of the
+          problem.
+        example: 123abc
+      message:
+        type: string
+        description: Message is a human-readable explanation specific to this occurrence
+          of the problem.
+        example: parameter 'p' must be an integer
+      name:
+        type: string
+        description: Name is the name of this class of errors.
+        example: bad_request
+      temporary:
+        type: boolean
+        description: Is the error temporary?
+        example: false
+      timeout:
+        type: boolean
+        description: Is the error a timeout?
+        example: true
+    description: createNote_BadRequest_response_body result type (default view)
+    example:
+      fault: true
+      id: 123abc
+      message: parameter 'p' must be an integer
+      name: bad_request
+      temporary: false
+      timeout: true
+    required:
+    - name
+    - id
+    - message
+    - temporary
+    - timeout
+    - fault
+  CalcCreateNoteRequestBody:
+    title: CalcCreateNoteRequestBody
+    type: object
+    properties:
+      Body:
+        type: string
+        description: The Body of the Note
+        example: Fugit a nulla.
+      Title:
+        type: string
+        description: The title of the Note
+        example: Accusantium illo aut ipsam quia.
+    example:
+      Body: Rerum est nostrum qui aut vero.
+      Title: Sed ut beatae sint illo quam.
+  CalcCreateNoteResponseBody:
+    title: CalcCreateNoteResponseBody
+    type: object
+    properties:
+      NoteResponse:
+        $ref: '#/definitions/NoteResponseResponseBody'
+    example:
+      NoteResponse:
+        UUID: Et consequatur quis dolorum corporis officiis rerum.
+    required:
+    - NoteResponse
+  CalcGetNoteNoteMissingResponseBody:
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
+    properties:
+      fault:
+        type: boolean
+        description: Is the error a server-side fault?
         example: false
       id:
         type: string
@@ -201,10 +304,10 @@ definitions:
       timeout:
         type: boolean
         description: Is the error a timeout?
-        example: true
-    description: createNote_BadRequest_response_body result type (default view)
+        example: false
+    description: getNote_NoteMissing_response_body result type (default view)
     example:
-      fault: false
+      fault: true
       id: 123abc
       message: parameter 'p' must be an integer
       name: bad_request
@@ -217,21 +320,62 @@ definitions:
     - temporary
     - timeout
     - fault
-  CalcCreateNoteRequestBody:
-    title: CalcCreateNoteRequestBody
+  CalcGetNoteResponseBody:
+    title: CalcGetNoteResponseBody
     type: object
     properties:
-      Body:
-        type: string
-        description: The Body of the Note
-        example: Doloremque qui recusandae.
-      Title:
-        type: string
-        description: The title of the Note
-        example: Aliquam vel facilis.
+      Note:
+        $ref: '#/definitions/NoteResponseBody'
     example:
-      Body: Quas deserunt quos est debitis accusamus.
-      Title: Dolor aut officiis quos voluptates rerum.
+      Note:
+        Body: Culpa odit.
+        Title: Iure repellat.
+        UUID: Odit non.
+  CalcGetNotesNoteMissingResponseBody:
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
+    properties:
+      fault:
+        type: boolean
+        description: Is the error a server-side fault?
+        example: false
+      id:
+        type: string
+        description: ID is a unique identifier for this particular occurrence of the
+          problem.
+        example: 123abc
+      message:
+        type: string
+        description: Message is a human-readable explanation specific to this occurrence
+          of the problem.
+        example: parameter 'p' must be an integer
+      name:
+        type: string
+        description: Name is the name of this class of errors.
+        example: bad_request
+      temporary:
+        type: boolean
+        description: Is the error temporary?
+        example: true
+      timeout:
+        type: boolean
+        description: Is the error a timeout?
+        example: false
+    description: getNotes_NoteMissing_response_body result type (default view)
+    example:
+      fault: false
+      id: 123abc
+      message: parameter 'p' must be an integer
+      name: bad_request
+      temporary: false
+      timeout: false
+    required:
+    - name
+    - id
+    - message
+    - temporary
+    - timeout
+    - fault
   CalcGetNotesResponseBody:
     title: CalcGetNotesResponseBody
     type: object
@@ -242,20 +386,32 @@ definitions:
           $ref: '#/definitions/NoteResponseBody'
         description: list of notes
         example:
-        - Body: Quibusdam eius.
-          Title: Necessitatibus quis quasi est eum ad.
-        - Body: Quibusdam eius.
-          Title: Necessitatibus quis quasi est eum ad.
-        - Body: Quibusdam eius.
-          Title: Necessitatibus quis quasi est eum ad.
-        - Body: Quibusdam eius.
-          Title: Necessitatibus quis quasi est eum ad.
+        - Body: Culpa odit.
+          Title: Iure repellat.
+          UUID: Odit non.
+        - Body: Culpa odit.
+          Title: Iure repellat.
+          UUID: Odit non.
+        - Body: Culpa odit.
+          Title: Iure repellat.
+          UUID: Odit non.
+        - Body: Culpa odit.
+          Title: Iure repellat.
+          UUID: Odit non.
     example:
       notes:
-      - Body: Quibusdam eius.
-        Title: Necessitatibus quis quasi est eum ad.
-      - Body: Quibusdam eius.
-        Title: Necessitatibus quis quasi est eum ad.
+      - Body: Culpa odit.
+        Title: Iure repellat.
+        UUID: Odit non.
+      - Body: Culpa odit.
+        Title: Iure repellat.
+        UUID: Odit non.
+      - Body: Culpa odit.
+        Title: Iure repellat.
+        UUID: Odit non.
+      - Body: Culpa odit.
+        Title: Iure repellat.
+        UUID: Odit non.
   NoteResponseBody:
     title: NoteResponseBody
     type: object
@@ -263,11 +419,26 @@ definitions:
       Body:
         type: string
         description: The Body of the Note
-        example: Nam deserunt et tempora atque.
+        example: Dolor aut officiis quos voluptates rerum.
       Title:
         type: string
         description: The title of the Note
-        example: Quia dolores consequatur cum itaque.
+        example: Doloremque qui recusandae.
+      UUID:
+        type: string
+        description: The UUID of the created note
+        example: Quas deserunt quos est debitis accusamus.
     example:
-      Body: Odit iusto vitae.
-      Title: Ea ut enim aut.
+      Body: Illum ea velit.
+      Title: Minus inventore accusamus.
+      UUID: Omnis debitis voluptatum est enim possimus exercitationem.
+  NoteResponseResponseBody:
+    title: NoteResponseResponseBody
+    type: object
+    properties:
+      UUID:
+        type: string
+        description: The UUID of the Created Note
+        example: In vero itaque quibusdam nihil perferendis.
+    example:
+      UUID: Corrupti molestiae ipsa voluptas impedit dolor.
